# aegis_server

./: Cargo.toml
